# simple-python-api-demo

./: debug.py  docker-compose.yaml  pyproject.toml
app/: main.py
app/db/: engine.py  linkme.py
app/routers/: echo.py  linkme.py
migration/: V1.0.0.sql
